--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Basic Marginal Effects for Logit Models
 Version: 0.1.0
 Author: Mathieu Steijn
 Maintainer: Mathieu Steijn <m.p.a.steijn@uu.nl>
-Description: Calculates marginal effects based on logistic model objects such as "glm" or "speedglm" at the average (default) or at given values indicated by \emph{at}. It also returns confidence intervals for said marginal effects and the p-values, which can easily be used as input in stargazer. The function only returns the essentials and is therefore much faster but not as detailed as other functions available to calculate marginal effects. As a result, it is highly suitable for large datasets for which other packages may require too much time or calculating power.
+Description: Calculates marginal effects based on logistic model objects such as 'glm' or 'speedglm' at the average (default) or at given values using finite differences. It also returns confidence intervals for said marginal effects and the p-values, which can easily be used as input in stargazer. The function only returns the essentials and is therefore much faster but not as detailed as other functions available to calculate marginal effects. As a result, it is highly suitable for large datasets for which other packages may require too much time or calculating power.
 License: GPL
 Encoding: UTF-8
 LazyData: true
